syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "protos/infrastructure.proto";

option csharp_namespace = "Soit.System.Protos";

package Soit.System;

service UserService{
  rpc Create (CreateUserRequest) returns (google.protobuf.StringValue);
  rpc Remove (Soit.System.IdentifyArray) returns (google.protobuf.Empty);
  rpc Update (UpdateUserRequest) returns (google.protobuf.Empty);
  rpc Find (Soit.System.Identify) returns (FindUserReply);
  rpc Query(QueryUserRequest) returns (QueryUserReply);
}

message CreateUserRequest
{
  string name=1;
  int64 entry_date=2;
  int64 departure_date=3;
  string mobile=4;
  string idcard=5;
  string job=6;
  repeated int64 computer_ids=7;
}

message UpdateUserRequest
{
  int64 id=1;
  string name=2;
  int64 entry_date=3;
  int64 departure_date=4;
  string mobile=5;
  string idcard=6;
  string job=7;
  repeated int64 computer_ids=8;
}

message FindUserReply
{
  int64 id=1;
  string name=2;
  int64 entry_date=3;
  int64 departure_date=4;
  string mobile=5;
  string idcard=6;
  string job=7;
  repeated Soit.System.NamedIdentify computer_ids=8;
}

message QueryUserRequest
{
  string contains = 1;
  Soit.System.OrderRequest order_request = 2;
  Soit.System.PageRequest page_request = 3;  
}

message QueryUserReply
{
  Soit.System.PageResult page_result = 1;
  repeated FindUserReply items = 2;
}